<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- What type of auth to use FormAuthLoginTask or LocalAuthLoginTask? -->
    <EditTextPreference
        android:defaultValue="@string/loginTaskDefaultValue"
        android:key="@string/loginTaskKey" />

    <!-- The username field -->
    <EditTextPreference
        android:defaultValue=""
        android:key="@string/usernameKey" />

    <!-- How often to push obersvations? -->
    <EditTextPreference
        android:defaultValue="@string/observationPushFrequencyDefaultValue"
        android:key="@string/observationPushFrequencyKey" />

    <!-- Used for static layers? -->
    <EditTextPreference
        android:defaultValue="@string/haveLayersBeenFetchedOnceDefaultValue"
        android:key="@string/haveLayersBeenFetchedOnceKey" />
    
    <!-- Option for some deployments.  Delete all data when logging out. -->
    <EditTextPreference
        android:defaultValue="@string/deleteAllDataOnLogoutDefaultValue"
        android:key="@string/deleteAllDataOnLogoutKey" />
    
</PreferenceScreen>