<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Data Fetching" >
    
    <PreferenceCategory android:title="DATA FETCH FREQUENCY" >
		<ListPreference
            android:defaultValue="@string/userFetchFrequencyDefaultValue"
            android:entries="@array/userFetchFrequencies"
            android:entryValues="@array/userFetchFrequencyValues"
            android:key="@string/userFetchFrequencyKey"
            android:title="Users" />
        <ListPreference
            android:defaultValue="@string/observationFetchFrequencyDefaultValue"
            android:entries="@array/observationFetchFrequencies"
            android:entryValues="@array/observationFetchFrequencyValues"
            android:key="@string/observationFetchFrequencyKey"
            android:title="Observations" />
    </PreferenceCategory>

</PreferenceScreen>