<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <mil.nga.giat.mage.sdk.preferences.PreferenceScreenSwitch
        android:order="3"
        android:title="Notifications"
        android:summary="Receive notifications when new observations are loaded"
        android:key="@string/notificationsEnabledKey"
        android:defaultValue="false">
    </mil.nga.giat.mage.sdk.preferences.PreferenceScreenSwitch>
    <PreferenceCategory
        android:order="4"
        android:title="MEDIA" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/imageUploadSize"
            android:entryValues="@array/imageUploadSizeValues"
            android:key="imageUploadSize"
            android:title="Image Upload Size" />
    </PreferenceCategory>
    <PreferenceCategory
        android:order="5"
        android:title="ABOUT" >
        <EditTextPreference
            android:key="@string/serverURLKey"
            android:selectable="false"
            android:title="Server URL" />
        <EditTextPreference
            android:key="@string/usernameKey"
            android:selectable="false"
            android:title="Username" />
        <EditTextPreference
            android:key="@string/buildVersionKey"
            android:selectable="false"
            android:title="MAGE App Version" />
    </PreferenceCategory>

</PreferenceScreen>