<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="Location Services">

    <CheckBoxPreference
        android:defaultValue="@bool/reportLocationDefaultValue"
        android:key="@string/reportLocationKey"
        android:summary="Track and report device location"
        android:title="Report Location"/>

    <PreferenceCategory android:title="GPS TIME/DISTANCE SENSITIVITY"
        android:key="@string/gpsPreferencesCategoryKey">

        <mil.nga.giat.mage.sdk.preferences.IntegerListPreference
            android:defaultValue="@integer/locationPushFrequencyDefaultValue"
            android:entries="@array/locationPushFrequencies"
            android:entryValues="@array/locationPushFrequencyValues"
            android:key="@string/locationPushFrequencyKey"
            android:summary="%s \n\nMinimum time interval between location reports to the server. Smaller intervals will report your location to the server more often at the cost of battery drain."
            android:title="Push Interval"/>

        <mil.nga.giat.mage.sdk.preferences.IntegerListPreference
            android:defaultValue="@integer/gpsSensitivityDefaultValue"
            android:entries="@array/gpsSensitivities"
            android:entryValues="@array/gpsSensitivityValues"
            android:key="@string/gpsSensitivityKey"
            android:summary="%s \n\nMinimum distance between location updates. Smaller distances will give a more precise location at the cost of battery drain."
            android:title="GPS Distance Sensitivity"/>

    </PreferenceCategory>

</PreferenceScreen>